--- a/00-L1-CS1B-ASI-MARCH-2022/L1-Question3.Rmd
+++ b/00-L1-CS1B-ASI-MARCH-2022/L1-Question3.Rmd
@@ -44,8 +44,15 @@ reported over last one quarter.
 The data is provided herewith the file MotorClaim.csv which contains the following fields
 POLICY: Policy Number
 CLAIM : Amount of claim reported for a policy
+
+
+---
+
+
 Insurance Company is interested to find out an appropriate distribution to fit the “CLAIM” 
-data. You are being asked to find out the appropriateness of the following distributions 
+data. 
+
+You are being asked to find out the appropriateness of the following distributions 
 based on method of moments:
 1. Normal distribution
 2. Lognormal distribution
@@ -54,35 +61,39 @@ based on method of moments:
 
 ---
 
+#### Exercises
 
-i) Estimate the parameters of each of the above distributions. (8)
-ii) Plot a histogram of “CLAIM” data with 35 equal class intervals. Superimpose the 
+A. Estimate the parameters of each of the above distributions. 
+B. Plot a histogram of “CLAIM” data with 35 equal class intervals. Superimpose the 
 histogram with the probability density function of the above four distributions using 
-their estimated parameters as obtained in part (i). Mark each plot distinctly using 
-appropriate legend. (8)
-iii) Compute the 5th percentile, 1st quartile, median, 3rd quartile and 95th percentile of both 
-the actual claim paid as well as the fitted distributions. (5)
-iv) Using the results from (ii) and (iii) comment on goodness of fit of the models to the 
+their estimated parameters as obtained in part (A). Mark each plot distinctly using 
+appropriate legend. 
+C. Compute the 5th percentile, 1st quartile, median, 3rd quartile and 95th percentile of both 
+the actual claim paid as well as the fitted distributions. 
+D. Using the results from (B) and (C) comment on goodness of fit of the models to the 
 data. 
 ---
-v) Assuming Gamma distribution to be the right fit to the data, simulate 20,000 values of 
+
+### Exercises
+
+E. Assuming Gamma distribution to be the right fit to the data, simulate 20,000 values of 
 claim amounts using the Gamma distribution based on the parameter estimates 
-obtained in part (i) and print first 10 values of claim amounts. (Set seed to 2022) (2)
-vi) Generate 700 different random samples of size 400 from the simulated data obtained 
-in part (v) and compute sample mean for each of the samples. (Set seed to 2022) (5)
-vii)Plot the histogram of sample means generated from part (vi) and comment on the 
-distribution of the sample means from the point of view of central limit theorem. (3)
+obtained in part (i) and print first 10 values of claim amounts. (Set seed to 2022)
+F. Generate 700 different random samples of size 400 from the simulated data obtained 
+in part (v) and compute sample mean for each of the samples. (Set seed to 2022)
+G. Plot the histogram of sample means generated from part (vi) and comment on the 
+distribution of the sample means from the point of view of central limit theorem. 
 
 ---
 
-[35 Marks]
-Solution 3:
+### Read in the data set
 
 ```{r}
 # Sample mean and variance
 Motorclaim = read.csv("Motorclaim.CSV")
-Mean_Claim<-mean(Motorclaim$CLAIM)
-Var_Claim<-var(Motorclaim$CLAIM)
+
+Mean_Claim <-mean(Motorclaim$CLAIM)
+Var_Claim <- var(Motorclaim$CLAIM)
 ```
 
 ---
@@ -99,7 +110,7 @@ Normal_sigma
 ```
 
 ---
-# Log Normal Distribution
+#### Log Normal Distribution
 ```{r}
 LogNormal_sigma<- sqrt(log(1+Var_Claim/Mean_Claim^2)) 
 LogNormal_mu<-log(Mean_Claim)-LogNormal_sigma^2/2 
@@ -120,6 +131,11 @@ LogNormal_mu
 Exp_lamda <- 1/Mean_Claim 
 Exp_lamda
 #[1] 0.0001572991 
+```
+
+---
+
+```{r}
 # Gamma Distribution
 Gamma_lamda<-Mean_Claim/Var_Claim 
 Gamma_alpha<-Gamma_lamda*Mean_Claim 
@@ -130,7 +146,11 @@ Gamma_alpha
 [1] 0.82799 
 
 ---
-ii)
+
+### Part B 
+ 
+ 
+ 
 ```{r}
 # Histogram
 hist(Motorclaim$CLAIM,breaks = 35,freq = FALSE) 
@@ -181,7 +201,9 @@ c("blue","green","red","yellow"))
 
 ---
  
- (8)
+
+### Part C 
+ 
 iii)
 # Quantiles 
 # Actual Claim Data
@@ -197,16 +219,33 @@ qnorm(c(0.05,0.25,0.5,0.75,0.95),mean = Normal_mu,sd = Normal_sigma)
 # Log Normal Distribution
 qlnorm(c(0.05,0.25,0.5,0.75,0.95),meanlog = LogNormal_mu,sdlog = LogNormal_sigma) 
 [1] 989.8714 2347.5526 4278.5767 7798.0014 18493.5327 
-# Exponential Distribution
-qexp(c(0.05,0.25,0.5,0.75,0.95),rate = Exp_lamda) 
-[1] 326.0876 1828.8853 4406.5544 8813.1089 19044.8114 
+# 
 
 ---
-# Gamma Distribution
-qgamma(c(0.05,0.25,0.5,0.75,0.95),shape = Gamma_alpha,rate = Gamma_lamda) 
+
+### Exponential Distribution
+
+```{r}
+qexp(c(0.05,0.25,0.5,0.75,0.95),
+     rate = Exp_lamda) 
+ 
+```
+
+---
+
+### Gamma Distribution
+
+```{r}
+qgamma(c(0.05,0.25,0.5,0.75,0.95),
+       shape = Gamma_alpha,
+       rate = Gamma_lamda) 
+
+```
 [1] 193.6261 1479.4200 4053.4299 8797.0450 20369.6614 
 
 ---
+
+### Part D
 
 iv) From the histogram and superimposed plots it is clear that normal distribution is not good fit to 
 the data. 
@@ -218,41 +257,52 @@ The best fitting distribution among Lognormal, exponential & Gamma can not be de
 observations from (ii) & (iii). Further statistical tests need to be carried out to confirm best fit 
 
 ---
-v)
 
+### Part E
+
+```{r}
 # Simulation from Gamma distribution
 set.seed(2022) 
 Sim_samples <- rgamma(20000,Gamma_alpha,Gamma_lamda) 
 head(Sim_samples,10) 
+```
 
 
 ---
 
-vi)
+### Part F
+```{r}
 # Generating 700 random samples of size 400 and computing sample means 
 means<-c()
 set.seed(2022)
 for (i in 1:700){
-selected_data_point<-sample(1:20000,400,FALSE)
-random_sample<- Sim_samples[selected_data_point]
-sample_mean<-mean(random_sample)
-means<-c(means,sample_mean)
+  selected_data_point <- sample(1:20000,400,FALSE)
+  random_sample <- Sim_samples[selected_data_point]
+  sample_mean <- mean(random_sample)
+  means <- c(means,sample_mean)
 } 
+
+```
+
+---
+
+### Part G}
 (5)
 vii)
+```{r}
 # Histogram of the sample means
 hist(means,breaks = 40)
+```
 
 ---
 
 
 ---
-Page 13 of 13
+
 Comment:
 The distribution of sample means tend to follow normal distribution however the actual data comes 
 from gamma distribution. Central Limit Theorem states that the sample means tend to follow 
 normal distribution as the sample size increases. The distribution of sample means will be closer to 
 normal distribution by increasing the sample size from its current level of 400. 
- (3)
-[35 Marks]
-***************************
+
+---
