--- a/00-N1-CS1B-FIA-Sept-2022/N1-Question-3.Rmd
+++ b/00-N1-CS1B-FIA-Sept-2022/N1-Question-3.Rmd
@@ -39,29 +39,38 @@ pre {
 ---
 
 3 A male athlete ran 1 mile in 254.4 seconds on 31 May 1913. This was a world record 
-at the time. The data file mile_records.Rdata contains the dates measured in 
+at the time. The data file <tt>mile_records.Rdata</tt> contains the dates measured in 
 days since 31 May 1913 and the times (in seconds) of all new world records for males 
-over the 1-mile distance. The data set mile_records.Rdata contains 32 records. 
+over the 1-mile distance. The data set <tt>mile_records.Rdata</tt> contains 32 records. 
 The variables are called record.date and record.time in the Rdata file. You 
 can load the file with load("mile_records.Rdata"). 
-(i) Plot record.time as a function of record.date. [2] 
-(ii) Calculate the Pearson’s correlation coefficient between the two data sets. [2] 
+
+---
+
+(i) Plot record.time as a function of record.date.  
+(ii) Calculate the Pearson’s correlation coefficient between the two data sets.  
 (iii) Fit a linear regression model to the data using record.time as the response 
 variable and record.date as the only explanatory variable. State the 
-estimated intercept and slope of the regression line. [3] 
-(iv) Plot the regression line by adding it to the plot from part (i). [2] 
+estimated intercept and slope of the regression line. 
+
+---
+
+(iv) Plot the regression line by adding it to the plot from part (i).  
 (v) Perform a statistical test in order to test the null hypothesis that the slope of 
 the regression line in part (iv) is zero, against a suitable alternative using the 
-output of the fitted model from part (iii). [4] 
-(vi) Comment on the relationship between the two variables. [4] 
+output of the fitted model from part (iii).  
+(vi) Comment on the relationship between the two variables.  
 For simplicity, you can assume that 1 year has 365 days. 
 (vii) Estimate the expected time in seconds of the world record 100 years after the 
-most recent record in this data set. [4] 
+most recent record in this data set. 
+
+---
+
 (viii) Calculate the number of years (from the most recent record) in which you 
 expect the world record to be 2 minutes, based on your fitted model from 
-part (iii). [4] 
+part (iii).  
 (ix) Comment on the suitability of the linear regression model for modelling 
-record.time as a function of record.date. [2] 
+record.time as a function of record.date.  
  [Total 27] 
  
  
@@ -118,16 +127,16 @@ CS1B – Actuarial Statistics – Core Principles – September 2022 - Examiners
 CS1B S2022 © Institute and Faculty of Actuaries
 However, the response variable cannot increase with time (it is a world record). 
 So we cannot observe a positive relationship, meaning that the above results are to be 
-expected [2]
+expected 
 (vii)
 x = record.date[32]+365*100 
-predict(model, data.frame(record.date=x)) [2]
+predict(model, data.frame(record.date=x)) 
 # Or
-coefficients(model) + coefficients(model)[2]*x
+coefficients(model) + coefficients(model)*x
 181.66 seconds 
 (viii)
 twoMinuteDate = (120 -
-coefficients(model))/coefficients(model)[2] 
+coefficients(model))/coefficients(model) 
 twoMinuteDate = twoMinuteDate - record.date[32] 
 twoMinuteDate/365 
 This gives: 256.97 years. 
